Agregar resultados y citar fuentes

--- a/Justificacion/justificacion.tex
+++ b/Justificacion/justificacion.tex
@@ -1,34 +1,34 @@
-Actualmente, el desarrollo de páginas web es una de las oportunidades de empleo con mayor demanda dentro del área de la informática, en los principales buscadores de empleo se pueden encontrar una área de oportunidad para ejercer. El desarrollo Front-End, de páginas web, es una de las subáreas más buscadas por las empresas que implementan servicios basados en web, o que de alguna manera consumen algún producto. 
-El famoso sitio Stackoverflow realiza una serie de estadísticas anuales en las cuales da a conocer los lenguajes de programación en los cuales ellos obtienen un mayor número de búsquedas y respuestas. Las estadísticas muestran que, durante el transcurso del año pasado (2020), el lenguaje más usado por la comunidad de desarrolladores profesionales es Javascript. 
+Actualmente, el desarrollo de páginas web es una de las oportunidades de empleo con mayor demanda dentro del área de la informática, en los principales buscadores de empleo  \cite{work} se pueden encontrar una área de oportunidad para ejercer. El desarrollo Front-End, de páginas web, es una de las subáreas más buscadas por las empresas que implementan servicios basados en web, o que de alguna manera consumen algún producto. 
+El famoso sitio Stackoverflow  \cite{stackOverflow}realiza una serie de estadísticas anuales en las cuales da a conocer los lenguajes de programación en los cuales ellos obtienen un mayor número de búsquedas y respuestas. Las estadísticas muestran que, durante el transcurso del año pasado (2020), el lenguaje más usado por la comunidad de desarrolladores profesionales es Javascript. 
 Por otra parte, dentro esta serie de estadísticas se cuenta con un apartado para los Frameworks, en el cual encontramos que en segundo puesto está React, solo por debajo de jquery el cual puede ser empotrado dentro de React.  Finalmente se encontró que la librería número uno es Node.js. 
-El desarrollo Front-End de páginas web consiste en hacer la visualización que tenemos cuando ingresamos a algún sitio desde nuestro navegador, para esto es necesario que el programador que realiza la tarea tenga conocimientos básicos de html, css y Javascript, para que sea posible construir una web sencilla. Cabe destacar que un desarrollador Front-End no es el encargado de diseñar la experiencia de usuario ni tampoco el diseño de interfaz gráfica, ya que para esto existen otras disciplinas especializadas, pero en caso de tener conocimiento en el área puede agregar una herramienta que puede combinarse y agregar habilidades.
+El desarrollo Front-End  \cite{frontEnd}de páginas web consiste en hacer la visualización que tenemos cuando ingresamos a algún sitio desde nuestro navegador, para esto es necesario que el programador que realiza la tarea tenga conocimientos básicos de html, css y Javascript, para que sea posible construir una web sencilla. Cabe destacar que un desarrollador Front-End no es el encargado de diseñar la experiencia de usuario ni tampoco el diseño de interfaz gráfica, ya que para esto existen otras disciplinas especializadas, pero en caso de tener conocimiento en el área puede agregar una herramienta que puede combinarse y agregar habilidades.
 \newline
 En la medida que una web escala, esta tiende a aumentar su complejidad de desarrollo si no se comienzan a usar librerías o frameworks, que nos permiten a tener un trabajo más limpio, organizado, seguro y modulable. 
-Como se mencionó anteriormente Javascript es usado tanto de manera profesional como con otros fines como los académicos, este lenguaje cuenta con un gestor de paquetes denominado NPM, que permite que se agreguen miles de funcionalidades extras a tu proyecto, NPM consiste en un cliente de líneas de comandos con el cual es posible agregar a nuestro proyecto paquetes, estos paquetes son de utilidad porque podemos reusar código que alguien más ya desarrollo, probó y decidió compartirlo, haciendo que el trabajo sea más ágil.  De igual manera nosotros podemos aportar publicando nuestra librería. Dentro de NPM contamos con miles de librerías de código abierto.  
+Como se mencionó anteriormente Javascript es usado tanto de manera profesional como con otros fines como los académicos, este lenguaje cuenta con un gestor de paquetes denominado NPM  \cite{npm},  que permite que se agreguen miles de funcionalidades extras a tu proyecto, NPM consiste en un cliente de líneas de comandos con el cual es posible agregar a nuestro proyecto paquetes, estos paquetes son de utilidad porque podemos reusar código que alguien más ya desarrollo, probó y decidió compartirlo, haciendo que el trabajo sea más ágil.  De igual manera nosotros podemos aportar publicando nuestra librería. Dentro de NPM contamos con miles de librerías de código abierto.  
 Teniendo esto en cuenta, nos da la posibilidad de tener nuestra propia librería y publicarla, para que personas a las cuales tienen alguna necesidad, pero no cuentan con el tiempo de ejecutarla puedan acceder a la nuestra, e incluso nosotros mismos usarlas en posteriores proyectos. 
 
-El desarrollo de software de código abierto consiste en publicar algún tipo de herramienta propia, el cual será de licencia pública para que más personas puedan acceder al código fuente, si lo desean podrán usarlo o adecuarlo a sus necesidades. 
+El desarrollo de software de código abierto \cite{openSource} consiste en publicar algún tipo de herramienta propia, el cual será de licencia pública para que más personas puedan acceder al código fuente, si lo desean podrán usarlo o adecuarlo a sus necesidades. 
 Anteriormente se mencionó un Framework de Front-End llamado React, este es mantenido por Facebook desde mayo del 2013 que fue su fecha de publicación, en la actualidad tiene más de mil contribuidores según lo indica el repositorio oficial. 
-Algunas de las particularidades de React es que nos motiva a crear componentes que pueden ser utilizados más veces, y de esta manera tener una menor cantidad de código y más reutilizable. 
+Algunas de las particularidades de React  \cite{reactOreilly}es que nos motiva a crear componentes que pueden ser utilizados más veces, y de esta manera tener una menor cantidad de código y más reutilizable. 
 Nos deja crear una aplicación en una sola página que de ser de una manera tradicional y a gran escala se convertirían en una tarea imposible.
 \newline
 Por el uso desmedido de cada una de las tecnologías que se han mencionado nace la razón por la cual se desea desarrollar una librería de NPM, la cual ayudará grandemente a la comunidad de desarrolladores de páginas web y esto principalmente a las personas que cubren el rol de programadores Front-End. 
-Esta librería permitiría a los desarrolladores agilizar su carga de trabajo, poniendo a su alcance un conjunto de elementos usados en el desarrollo Front-End, alguno de ellos son botones, textos, etiquetas de texto, tablas, checkbox, radio botones, etc.  Los cuáles serán elementos definidos, que contarán con una definición de estilos (css) establecidos, cada componente permitirá al desarrollador modificar parámetros básicos como el color, el texto y acción que va a realizar, esto con el fin de adaptarlo a las necesidades propias del proyecto en el que se va a hacer la implementación de la librería.  
-Otra ventaja por parte de la librería es que esta estará basada en prácticas modernas del diseño UI/UX, como lo es Mobile First Indexing (ideología de Google), que nos pide enfocar el diseño de cualquier web primero para dispositivos móviles, ya que afirman que es en el mercado el cual consume más contenido web, ayudándonos a no requerir un conocimiento avanzado sobre el diseño de interfaces gráficas. 
+Esta librería permitiría a los desarrolladores agilizar su carga de trabajo, poniendo a su alcance un conjunto de elementos usados en el desarrollo Front-End, alguno de ellos son botones, textos, etiquetas de texto, tablas, checkbox, radio botones, etc.  Los cuáles serán elementos definidos, que contarán con una definición de estilos \cite{scss} (css) establecidos, cada componente permitirá al desarrollador modificar parámetros básicos como el color, el texto y acción que va a realizar, esto con el fin de adaptarlo a las necesidades propias del proyecto en el que se va a hacer la implementación de la librería.  
+Otra ventaja por parte de la librería es que esta estará basada en prácticas modernas del diseño UI/UX, como lo es Mobile First \cite{mobileFirst} Indexing (ideología de Google), que nos pide enfocar el diseño de cualquier web primero para dispositivos móviles, ya que afirman que es en el mercado el cual consume más contenido web, ayudándonos a no requerir un conocimiento avanzado sobre el diseño de interfaces gráficas. 
 Finalmente, además de los elementos básicos que incluirá la librería, tendrá más elementos que permitirán aún más la eficiencia, contendrá otros elementos compuestos como formularios, tarjetas, alertas, pies de página, menús de navegación, elementos deslizables. 
 
 La última parte de la librería consistirá en elementos aún más compuestos, denominados plantillas que consiste en pantallas de login, registro, página de inicio entre otras. Abriendo la posibilidad que más personas puedan aportar creando sus propias plantillas, y crear una comunidad de desarrollo.  
 Debemos tomar en cuenta que este proyecto no se puede clasificar dentro del área de los frameworks ya que para ser parte de, es necesario contemplar toda la estructura necesaria dentro de una página web, modelos, vistas y controladores (MVC). Nuestro proyecto está focalizado en las vistas, por lo cual puede clasificarse como librería.  
   
-Con el uso de esta librería reduciremos el tiempo de desarrollo, ya que no comenzaremos a escribir html y css desde cero, tendremos una base común sobre la cual podemos seguir. Todo el equipo tendrá los mismos estilos y evitaremos que nuestra web tenga discrepancias dentro de los diferentes módulos o vistas que tiene nuestra web. 
+Con el uso de esta librería reduciremos el tiempo de desarrollo, ya que no comenzaremos a escribir html y  css desde cero, tendremos una base común sobre la cual podemos seguir. Todo el equipo tendrá los mismos estilos y evitaremos que nuestra web tenga discrepancias dentro de los diferentes módulos o vistas que tiene nuestra web. 
 Al usar esta librería nos aseguraremos de que las vistas de nuestra aplicación web puedan mirarse estéticamente iguales y tendemos la seguridad de que luzca de la misma forma en Chrome, Safari Firefox o un mayor número de navegadores, no importa si es una versión actual o una más antigua. 
 Con esta librería evitamos el tiempo de aprender un nuevo Framework, ya que funciona sobre React y los conocimientos necesarios son saber React. 
 Tendríamos una organización predeterminada para todo el proyecto en el que se implementa, teniendo uniformidad en el desarrollo y en la interfaz gráfica, aumentando la agilidad en el trabajo y de manera proporcional reduciendo el tiempo y primordialmente el costo que implica, también reducirá el mantenimiento, así como los posibles errores. 
 Debemos tomar en cuenta que el número de personas que participan en el desarrollo de un software es variado, pero regularmente este es mayor a uno, por lo que es conveniente que el código sea claro, legible y reutilizable para que el mayor número de personas que están involucradas, para que puedan trabajar en la mayor parte del proyecto sin problemas en caso de que exista un cambio de roles, es por lo que usar una librería estandariza el trabajo. 
 Las librerías cumplen con gran cantidad de pruebas, para que no surjan problemas y sean impedimento al implementarlas, esta no será la excepción al incluir pruebas de validación, así también se eliminan errores en el proyecto donde se implementan. 
   
-Lamentablemente como en todo framework y librería existe la desventaja a que al implementarlo este te fuerza a verte limitado con respecto a la cantidad de configuración y personalización que podemos editar. Otra cosa por tomar en cuenta es que no se necesita aprender una sintaxis específica para usar esta librería, pero es necesario conocer la sintaxis que se usa con React, ya que esta librería es basada en React, y es necesario conocer los conceptos básicos como el uso de componentes y el paso de elemento. Al usar una nueva librería es posible que sientas que estás perdiendo el tiempo al incorporarlo en proyectos, debido al tiempo de aprendizaje. También no se encuentra recomendable agregar la librería en un proyecto que ya está avanzado, y no lo es por el funcionamiento o incompatibilidad de librerías, esto es más bien, porque no es viable visualmente ya que se encontrara elementos y vistas distintas unas entre otras, esto, si no se decide actualizar los elementos existentes lo cual aumenta el tiempo de desarrollo.
+Lamentablemente como en todo framework y librería existe la desventaja a que al implementarlo este te fuerza a verte limitado con respecto a la cantidad de configuración y personalización que podemos editar \cite{newTech}. Otra cosa por tomar en cuenta es que no se necesita aprender una sintaxis específica para usar esta librería, pero es necesario conocer la sintaxis que se usa con React, ya que esta librería es basada en React, y es necesario conocer los conceptos básicos como el uso de componentes y el paso de elemento. Al usar una nueva librería es posible que sientas que estás perdiendo el tiempo al incorporarlo en proyectos, debido al tiempo de aprendizaje. También no se encuentra recomendable agregar la librería en un proyecto que ya está avanzado, y no lo es por el funcionamiento o incompatibilidad de librerías, esto es más bien, porque no es viable visualmente ya que se encontrara elementos y vistas distintas unas entre otras, esto, si no se decide actualizar los elementos existentes lo cual aumenta el tiempo de desarrollo.
 
 
-Debemos considerar que al agregar una capa software extra a nuestro Proyecto aumenta en tamaño, ya que además del peso de React que es necesaria para usar esta librería debemos contar el peso de nuestra librería en sí, aunque no todas  las tecnologías  mencionadas son agregadas en la versión que estará alojado en el proyecto, ya que por ejemplo Webpack, solo es usado durante el desarrollo.
+Debemos considerar que al agregar una capa software extra a nuestro Proyecto aumenta en tamaño, ya que además del peso de React que es necesaria para usar esta librería debemos contar el peso de nuestra librería en sí, aunque no todas  las tecnologías  mencionadas son agregadas en la versión que estará alojado en el proyecto, ya que por ejemplo Webpack \cite{webPack}, solo es usado durante el desarrollo.
 \newpage
