MArco teorico React

--- a/Bibliografia/bibliografia.tex
+++ b/Bibliografia/bibliografia.tex
@@ -37,6 +37,8 @@
 
 \bibitem{work} Riquelme, R. (2016, 17 octubre). Los 10 mejores trabajos en TI e Ingeniería. El Economista. https://www.eleconomista.com.mx/tecnologia/Los-10-mejores-trabajos-en-TI-e-Ingenieria-20161017-0053.html
 
+\bibitem{publish} Rodriguez, M. A. (2019, 3 diciembre). Crear y publicar un paquete NPM en 4 sencillos pasos. Medium. https://medium.com/200-response/crear-y-publicar-un-paquete-npm-en-4-sencillos-pasos-8e7498b558a2
+
 \bibitem{frontEnd2} Ruiz Inoue, K. (2020, 20 agosto). ¿Qué es el Desarrollo Front end, Back end y Fullstack? Medium. https://medium.com/deuk/qué-es-el-desarrollo-front-end-back-end-y-fullstack-2941b51afd1
 
 \bibitem{stackOverflow} Stack Overflow Developer Survey 2020. (2020). Stack Overflow. https://insights.stackoverflow.com/survey/2020#overview
