--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -52,7 +52,7 @@
 		\chapter {Caracterización Del Área En La Que Se Participó  }
 			\input{./CaracterizacionAreas/CaracterizacionAreas.tex}
 		
-		\chapter {Problemas A Rerolver Ccon Su Respectiva Priorización }
+		\chapter {Problemas A Resolver Con Su Respectiva Priorización }
 			\input{./Problemas/Problemas.tex}
 			
 		\chapter {Aalcances Y Limitaciones }
@@ -72,6 +72,9 @@
 				
 			\section {Test }
 				\input{./Procedimiento/test.tex}
+				
+			\section {Publicación de la librería en NPM }
+				\input{./Procedimiento/publicacion.tex}
 			
 		
 		\chapter {Pruebas y Resultados}
