--- a/Bibliografia/bibliografia.tex
+++ b/Bibliografia/bibliografia.tex
@@ -14,6 +14,8 @@
 
 \bibitem{CRA} Getting Started | Create React App. (s. f.). Create React App. https://create-react-app.dev/docs/getting-started/
 
+\bibitem{jest} Getting Started · Jest. (s. f.). Jest. https://jest-bot.github.io/jest/docs/getting-started.html
+
 \bibitem{} Hudson, P. (2016). Hacking with REACT [Libro electrónico]. http://www.hackingwithREACT.com/
 
 \bibitem{javascript} JAVASCRIPT. (2020, 11 agosto). Documentación web de MDN. https://developer.mozilla.org/es/docs/Web/JAVASCRIPT
