--- a/Investigacion.tex
+++ b/Investigacion.tex
@@ -38,6 +38,7 @@
 		\listoffigures
 		
 		\chapter {Introducción}
+			\input{./Introduccion/introduccion.tex}
 			
 		\chapter {Justificación }
 			\input{./Justificacion/justificacion.tex}
