--- a/Justificacion/justificacion.tex
+++ b/Justificacion/justificacion.tex
@@ -31,4 +31,11 @@ Lamentablemente como en todo framework y librería existe la desventaja a que al
 
 
 Debemos considerar que al agregar una capa software extra a nuestro Proyecto aumenta en tamaño, ya que además del peso de React que es necesaria para usar esta librería debemos contar el peso de nuestra librería en sí, aunque no todas  las tecnologías  mencionadas son agregadas en la versión que estará alojado en el proyecto, ya que por ejemplo Webpack \cite{webPack}, solo es usado durante el desarrollo.
+
+Al usar la presente librería se acorta el trabajo necesario, que es requerido después de que el maquetado de nuestra página web está listo, ya que a diferencia de otras librerías  como Material Design solo se enfocan el maquetado pero esta librería se involucra en la funcionalidad de los componentes.
+
+Una vez un componente de esta librería, se implemente,  este no necesitará trabajo extra, el componente estará listo para ser utilizado, por ejemplo para el componente de entrada de texto estará directamente conectado con el estado de React, eso significa que cuando necesitemos el dato introducido ya lo tendremos listo, y no como en React simple que debemos procesar el input para poder obtener el dato.
+
+Esto deja la librería como una opción híbrida entre el maquetado simple conformado por html, css etc. y el procesamiento de los datos con javascript y php.
+
 \newpage
